Refactor percent encoding
Use a dedicated class, encode only the required characters
as suggested in RFC 3986.