@@ -21,17 +21,12 @@ import com.rabbitmq.http.client.domain.QueryParameters;
 
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Base64;
 
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
-import java.nio.ByteBuffer;
-import java.nio.charset.Charset;
-import java.util.BitSet;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
@@ -42,8 +37,6 @@ import java.util.Map;
 final class Utils {
 
     private Utils() { }
-
-    private static final Charset CHARSET_UTF8 = Charset.forName("UTF-8");
 
     static void notNull(Object object, String message) {
         if (object == null) {
@@ -101,7 +94,7 @@ final class Utils {
                     "URL should be like 'https://guest:guest@localhost:15672/api/'");
         }
         String[] usernamePassword = userInfo.split(":");
-        if (usernamePassword == null || usernamePassword.length != 2) {
+        if (usernamePassword.length != 2) {
             throw new IllegalArgumentException("Could not extract password from URL. " +
                     "URL should be like 'https://guest:guest@localhost:15672/api/'");
         }
@@ -121,12 +114,7 @@ final class Utils {
 
     static String decode(String potentiallyEncodedString) {
         if (potentiallyEncodedString != null && !potentiallyEncodedString.isEmpty()) {
-            try {
-                return URLDecoder.decode(potentiallyEncodedString, CHARSET_UTF8.name());
-            } catch (UnsupportedEncodingException e) {
-                // should not happen, the character encoding is fixed and valid
-                throw new IllegalStateException("Error while decoding string", e);
-            }
+            return URLDecoder.decode(potentiallyEncodedString, StandardCharsets.UTF_8);
         } else {
             return potentiallyEncodedString;
         }
@@ -159,7 +147,7 @@ final class Utils {
         }
         URIBuilder withPath(String path) {
             if (sb.length() > 0 && sb.charAt(sb.length()-1) != '/') sb.append("/");
-            appendEncodePath(sb, path, CHARSET_UTF8);
+            sb.append(PercentEncoder.encodePathSegment(path));
             return this;
         }
         URIBuilder withQueryParameters(QueryParameters queryParameters) {
@@ -177,13 +165,13 @@ final class Utils {
 
                 if (queryParameters != null && !queryParameters.isEmpty()) {
                     for (Map.Entry<String, String> param : queryParameters.parameters().entrySet()) {
-                        sb.append(param.getKey()).append("=").append(Utils.encodeHttpParameter(param.getValue())).append("&");
+                        sb.append(param.getKey()).append("=").append(PercentEncoder.encodeParameter(param.getValue())).append("&");
                     }
                     sb.deleteCharAt(sb.length() - 1); // eliminate last &
                 }
                 if (mapOfParameters != null && !mapOfParameters.isEmpty()) {
                     for (Map.Entry<String, String> param : mapOfParameters.entrySet()) {
-                        sb.append(param.getKey()).append("=").append(Utils.encodeHttpParameter(param.getValue())).append("&");
+                        sb.append(param.getKey()).append("=").append(PercentEncoder.encodeParameter(param.getValue())).append("&");
                     }
                     sb.deleteCharAt(sb.length() - 1); // eliminate last &
                 }
@@ -203,147 +191,4 @@ final class Utils {
         return Base64.getEncoder().encodeToString(in.getBytes(StandardCharsets.UTF_8));
     }
 
-    /* from https://github.com/apache/httpcomponents-client/commit/b58e7d46d75e1d3c42f5fd6db9bd45f32a49c639#diff-a74b24f025e68ec11e4550b42e9f807d */
-
-    static String encodePath(String content, Charset charset) {
-        return appendEncodePath(new StringBuilder(), content, charset).toString();
-    }
-    static StringBuilder appendEncodePath(StringBuilder buf, String content, Charset charset) {
-        final ByteBuffer bb = charset.encode(content);
-        while (bb.hasRemaining()) {
-            final int b = bb.get() & 0xff;
-            if (PATHSAFE.get(b)) {
-                buf.append((char) b);
-            } else {
-                buf.append("%");
-                final char hex1 = Character.toUpperCase(Character.forDigit((b >> 4) & 0xF, RADIX));
-                final char hex2 = Character.toUpperCase(Character.forDigit(b & 0xF, RADIX));
-                buf.append(hex1);
-                buf.append(hex2);
-            }
-        }
-        return buf;
-    }
-    static String encodeHttpParameter(String value) {
-        return URLEncoder.encode(value, CHARSET_UTF8);
-    }
-
-    static String encode(String pathSegment) {
-        return encodePath(pathSegment, CHARSET_UTF8);
-    }
-
-    private static final int RADIX = 16;
-
-    /**
-     * Unreserved characters, i.e. alphanumeric, plus: {@code _ - ! . ~ ' ( ) *}
-     * <p>
-     * This list is the same as the {@code unreserved} list in
-     * <a href="https://www.ietf.org/rfc/rfc2396.txt">RFC 2396</a>
-     */
-    private static final BitSet UNRESERVED = new BitSet(256);
-    /**
-     * Punctuation characters: , ; : $ & + =
-     * <p>
-     * These are the additional characters allowed by userinfo.
-     */
-    private static final BitSet PUNCT = new BitSet(256);
-    /**
-     * Characters which are safe to use in userinfo,
-     * i.e. {@link #UNRESERVED} plus {@link #PUNCT}uation
-     */
-    private static final BitSet USERINFO = new BitSet(256);
-    /**
-     * Characters which are safe to use in a path,
-     * i.e. {@link #UNRESERVED} plus {@link #PUNCT}uation plus / @
-     */
-    private static final BitSet PATHSAFE = new BitSet(256);
-    /**
-     * Characters which are safe to use in a query or a fragment,
-     * i.e. {@link #RESERVED} plus {@link #UNRESERVED}
-     */
-    private static final BitSet URIC = new BitSet(256);
-
-    /**
-     * Reserved characters, i.e. {@code ;/?:@&=+$,[]}
-     * <p>
-     * This list is the same as the {@code reserved} list in
-     * <a href="https://www.ietf.org/rfc/rfc2396.txt">RFC 2396</a>
-     * as augmented by
-     * <a href="https://www.ietf.org/rfc/rfc2732.txt">RFC 2732</a>
-     */
-    private static final BitSet RESERVED = new BitSet(256);
-
-
-    /**
-     * Safe characters for x-www-form-urlencoded data, as per java.net.URLEncoder and browser behaviour,
-     * i.e. alphanumeric plus {@code "-", "_", ".", "*"}
-     */
-    private static final BitSet URLENCODER = new BitSet(256);
-
-    static {
-        // unreserved chars
-        // alpha characters
-        for (int i = 'a'; i <= 'z'; i++) {
-            UNRESERVED.set(i);
-        }
-        for (int i = 'A'; i <= 'Z'; i++) {
-            UNRESERVED.set(i);
-        }
-        // numeric characters
-        for (int i = '0'; i <= '9'; i++) {
-            UNRESERVED.set(i);
-        }
-        UNRESERVED.set('_'); // these are the charactes of the "mark" list
-        UNRESERVED.set('-');
-        UNRESERVED.set('.');
-        UNRESERVED.set('*');
-        URLENCODER.or(UNRESERVED); // skip remaining unreserved characters
-        UNRESERVED.set('!');
-        UNRESERVED.set('~');
-        UNRESERVED.set('\'');
-        UNRESERVED.set('(');
-        UNRESERVED.set(')');
-        // punct chars
-        PUNCT.set(',');
-        PUNCT.set(';');
-        PUNCT.set(':');
-        PUNCT.set('$');
-        PUNCT.set('&');
-        PUNCT.set('+');
-        PUNCT.set('=');
-        // Safe for userinfo
-        USERINFO.or(UNRESERVED);
-        USERINFO.or(PUNCT);
-
-        // URL path safe
-        PATHSAFE.or(UNRESERVED);
-        // here we want to encode the segment separator, because we encode segment by segment
-        // PATHSAFE.set('/'); // segment separator
-        PATHSAFE.set(';'); // param separator
-        PATHSAFE.set(':'); // rest as per list in 2396, i.e. : @ & = + $ ,
-        PATHSAFE.set('@');
-        PATHSAFE.set('&');
-        PATHSAFE.set('=');
-        PATHSAFE.set('+');
-        PATHSAFE.set('$');
-        PATHSAFE.set(',');
-
-        RESERVED.set(';');
-        RESERVED.set('/');
-        RESERVED.set('?');
-        RESERVED.set(':');
-        RESERVED.set('@');
-        RESERVED.set('&');
-        RESERVED.set('=');
-        RESERVED.set('+');
-        RESERVED.set('$');
-        RESERVED.set(',');
-        RESERVED.set('['); // added by RFC 2732
-        RESERVED.set(']'); // added by RFC 2732
-
-        URIC.or(RESERVED);
-        URIC.or(UNRESERVED);
-    }
-
-    /* end of from https://github.com/apache/httpcomponents-client/commit/b58e7d46d75e1d3c42f5fd6db9bd45f32a49c639#diff-a74b24f025e68ec11e4550b42e9f807d */
 }
